# renderer

./: .gitmodules  CMakeLists.txt  main.c
camera/: camera.c  camera.h
glad/: glad.c  glad.h
rendering/: rendering.c  rendering.h
rendering/shaders/: shaders.c  shaders.h  vertex.glsl
rendering/vao/: vao.c  vao.h
rendering/vbo/: vbo.c  vbo.h
window/: gui.c  gui.h  window.c  window.h
